# Tau

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  start_autonomous.sh  start_scheduler.sh  stop_autonomous.sh  stop_scheduler.sh  tau  tau.cmd
TMWebDriver/: TMWebDriver.py  __init__.py  multipost.py
TMWebDriver/skills_schema/: bilibili.com.json  google.com.json
TMWebDriver/tmwd_cdp_bridge/: background.js  manifest.json  popup.html
apps/: __init__.py
apps/common/: acp_bridge.py  btw_cmd.py  chatapp_common.py  continue_cmd.py  cost_tracker.py  export_cmd.py  review_cmd.py
assets/: email_daily_report.task.json  email_providers.json  email_report.example.json
core/: agent_loop.py  handler.py  paths.py  taumain.py
docs/: GETTING_STARTED.md  SETUP_EMAIL.md  SETUP_FEISHU.md  installation.md  installation_zh.md
memory/: adb_ui.py  autonomous_operation_sop.md  daily_report_build_today.py  daily_report_fetch.py  daily_report_instruction.md  daily_report_reference_sources.md  daily_report_render.py  daily_report_render_fallback.py  daily_report_sop.md  daily_report_sources.json  daily_report_validate.py  email_config.py  email_send.py  email_setup_sop.md  goal_hive_sop.md  goal_mode_sop.md  keychain.py  l3_capability_inventory.md  ocr_utils.py  plan_sop.md  review_sop.md  tmwebdriver_sop.md  ui_detect.py  vision_api.template.py  vision_sop.md  web_setup_sop.md
plugins/: langfuse_tracing.py
reflect/: goal_mode.py  scheduler.py
scripts/: README.md  as_daily_appendix.py  as_probe.py  smoke_daily_report_fetch.py  smoke_email_send.py  smoke_llmcore.py  smoke_packaging.py  smoke_tau.py  snapread.py  test_email_config.py
tau_cli/: __init__.py  cli.py  tau-cli-install.cmd  tau_cli.cmd
tests/: test_core_agent_layout.py  test_core_paths.py  test_daily_report_gates.py  test_taukey_path.py
(+77 files in other folders)
