# AI install hint: choose deps by OS/env + needed ui/bot. do NOT install all.
# minimal core first; missing packages can be installed on demand.
# base deps = what the installed package (core* + simphtml/TMWebDriver) imports;
# frontend-only deps (streamlit, aiohttp, ...) live under optional-dependencies.

[project]
name = "tau"
version = "0.1.0"
description = "Minimalist self-evolving autonomous agent framework"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",                 # core/llm/transport.py
    "beautifulsoup4>=4.12",           # simphtml.py
    "bottle>=0.12",                   # TMWebDriver.py
    "simple-websocket-server>=0.4",   # TMWebDriver.py
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
# select extras, not all. match current task/env.
# examples: .[ui] for GUI, bot deps only if bot needed.
ui = [
    "streamlit>=1.58.0",              # apps/web/streamlit/
    "pywebview>=4.0",
    "textual>=0.70",                  # apps/tui/app.py
    "aiohttp>=3.9",                   # apps/pet/bridge.py
    "PySide6>=6.5",                   # apps/gui/app.py
]
all-apps = [
    "python-telegram-bot>=20.0",
    "qq-botpy>=1.0",
    "pycryptodome>=3.19",
    "qrcode>=7.4",
    "lark-oapi>=1.0",
    "wecom-aibot-sdk>=1.0",
    "dingtalk-stream>=0.20",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["core*", "reflect*", "tau_cli*", "plugins*", "memory*", "TMWebDriver*"]
exclude = ["apps*", "tests*", "scripts*", "docs*", "assets*", "sche_tasks*", "temp*"]

[project.scripts]
tau = "tau_cli.cli:main"
